--- a/MyPrivateLibrary/DinnerHandler/MyPrivateLibrary.csproj
+++ b/MyPrivateLibrary/DinnerHandler/MyPrivateLibrary.csproj
@@ -76,6 +76,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Model\Book.cs" />
+    <Compile Include="Model\BookList.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Page Include="View\MainWindow.xaml">
